Revert "! for JDK 8"
This reverts commit 6dd07c3d